--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="270dp"
         android:layout_marginEnd="24dp"
         android:autofillHints=""
-        android:background="@android:color/transparent"
+        android:background="#6AFFFFFF"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
@@ -35,7 +35,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:autofillHints=""
-        android:background="@android:color/transparent"
+        android:background="#6AFFFFFF"
         android:hint="@string/senha"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
@@ -56,10 +56,11 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="64dp"
+        android:background="#6AFFFFFF"
         android:enabled="true"
         android:onClick="telaHome"
         android:text="@string/entrar"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,10 +91,11 @@
         android:layout_marginTop="140dp"
         android:layout_marginEnd="140dp"
         android:layout_marginBottom="45dp"
+        android:background="#4AFFFFFF"
         android:onClick="telaRegister"
         android:text="@string/cadastre_se"
         android:textAllCaps="false"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
