--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,107 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/fundo1">
 
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="159dp"
+            android:layout_height="146dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginRight="9dp"
+            android:contentDescription="@string/logo"
+            app:layout_constraintEnd_toStartOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon" />
 
         <TextView
-            android:id="@+id/origem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:id="@+id/logo3"
+            android:layout_width="161dp"
+            android:layout_height="77dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginEnd="13dp"
+            android:layout_marginRight="13dp"
+            android:text="@string/optimus_way"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            app:fontFamily="@font/goblin_one"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/logo"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/origem3"
+            android:layout_width="140dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="200dp"
+            android:gravity="center"
             android:text="@string/concordia"
-            android:textSize="20sp" />
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/ponto1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_width="140dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="18dp"
+            android:gravity="center"
             android:text="@string/seara"
-            android:textSize="20sp" />
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/origem3" />
 
         <EditText
             android:id="@+id/ponto1edt"
-            android:layout_width="150dp"
+            android:layout_width="168dp"
+            android:layout_height="38dp"
+            android:layout_alignParentRight="false"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:autofillHints="no"
+            android:background="#4AFFFFFF"
+            android:hint="@string/Passageiros"
             android:inputType="number"
-            android:layout_height="wrap_content"
-            android:hint="Passageiros"
-            android:layout_alignParentRight="@+id/ponto1"
-            android:layout_marginLeft="200dp"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:layout_alignParentEnd="false" tools:targetApi="o" />
 
         <TextView
             android:id="@+id/ponto2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_width="140dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="18dp"
+            android:gravity="center"
             android:text="@string/it"
-            android:textSize="20sp" />
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ponto1"/>
 
         <EditText
             android:id="@+id/ponto2edt"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:hint="Passageiros"
+            android:layout_width="168dp"
+            android:layout_height="38dp"
             android:layout_alignParentRight="@+id/ponto2"
-            android:layout_marginLeft="200dp"
-            android:textAlignment="center" />
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:background="#4AFFFFFF"
+            android:hint="@string/Passageiros"
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ponto1edt"
+            android:importantForAutofill="no"
+            android:layout_alignParentEnd="@+id/ponto2" />
 
         <TextView
             android:id="@+id/ponto3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_width="140dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="18dp"
+            android:gravity="center"
             android:text="@string/xavantina"
-            android:textSize="20sp" />
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ponto2" />
 
         <EditText
             android:id="@+id/ponto3edt"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:hint="Passageiros"
+            android:layout_width="168dp"
+            android:layout_height="38dp"
             android:layout_alignParentRight="@+id/ponto3"
-            android:layout_marginLeft="200dp"
-            android:textAlignment="center" />
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:background="#4AFFFFFF"
+            android:hint="@string/Passageiros"
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ponto2edt"
+            android:importantForAutofill="no"
+            android:layout_alignParentEnd="@+id/ponto3" />
 
         <TextView
             android:id="@+id/ponto4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_width="140dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="18dp"
+            android:gravity="center"
             android:text="@string/arvoredo"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
-            android:layout_marginStart="20dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ponto3" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="168dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:background="#00302D2D"
+            android:gravity="center"
+            android:text="@string/Destino"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ponto4edt" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="168dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:background="#00534B4B"
+            android:gravity="center"
+            android:text="@string/origem"
+            android:textColor="#FFFFFF"
+            android:textIsSelectable="false"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:onClick="telaMapa"
+            android:id="@+id/button3"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="70dp"
+            android:background="#666363"
+            android:gravity="center"
+            android:text="@string/registrar_rota"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/destino2"
+            android:layout_width="140dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="18dp"
+            android:gravity="center"
+            android:text="@string/chapeco"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ponto4" />
 
         <EditText
             android:id="@+id/ponto4edt"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:hint="Passageiros"
+            android:layout_width="168dp"
+            android:layout_height="38dp"
             android:layout_alignParentRight="@+id/ponto4"
-            android:layout_marginLeft="200dp"
-            android:textAlignment="center" />
-
-        <TextView
-            android:id="@+id/Destino"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="@string/chapeco"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"
-            android:text="Registrar Rota"
-            android:textSize="20sp"
-            android:onClick="telaMapa"/>
-
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:background="#4AFFFFFF"
+            android:hint="@string/Passageiros"
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ponto3edt"
+            android:importantForAutofill="no"
+            android:layout_alignParentEnd="@+id/ponto4" />
+</androidx.constraintlayout.widget.ConstraintLayout>
